Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.
! Broken/Alert

~~~~~~~~~~~~0.0.1 Revitalize 4-4-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added darkwood, midnight, and abyss casks which all provide bonuses to processing goods anywhere.
~Fixed an issue where the Crystal refiner would take twice as long to convert a gold quality mineral to an iridium quality one.

~~~~~~~~~~~~0.0.1 Revitalize 3-31-2023 xx.xx P.M~~~~~~~~~~~~~~
+Fixed some code regarding held object dropping location for the crystal refiner.
+Crystal Refiners now change colors when processing prismatic shards
+Added Crystal Refiner Unlock at donating 40 minerals to the musuem.
~Changed the Crystal Refiner Recipe to require more variety of resources, but less of them.

~~~~~~~~~~~~0.0.1 Revitalize 3-31-2023 xx.xx P.M~~~~~~~~~~~~~~
+Fixed a lot of code regarding object placement and object interaction.
+Continued working on the Crystal Refiner.

~~~~~~~~~~~~0.0.1 Revitalize 3-22-2023 xx.xx P.M~~~~~~~~~~~~~~
~Fixed some code so now dropping in items into machines functions with holding right click like normal gameplay.
+Added manual powered machine type that runs on stamina. Currently only used for Anvils.
+Added artifact trove and golden coconut processing recipes to magical and (unimplemented) galaxy geode crushers.
~Cleaned up more code from the defunct anvil crafting.

~~~~~~~~~~~~0.0.1 Revitalize 3-21-2023 xx.xx P.M~~~~~~~~~~~~~~
~Anvils no longer are used to craft objects due to not being able to think of many use cases.
+Anvils now can manually crack geodes, artifact troves, and golden coconuts.

~~~~~~~~~~~~0.0.1 Revitalize 3-16-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added in the Dimensional Storage Bag, which allows accessing items from anywhere!
  +Can be bought from the Walnut room for 100qi gems
  +Alternatively the blueprints can be bought from the Walnut room for 35 qi gems.

~~~~~~~~~~~~0.0.1 Revitalize 3-14-2023 xx.xx P.M~~~~~~~~~~~~~~