@@ -1,0 +1,19 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+using Omegasis.Revitalize.Framework.Constants.Ids.Items.BlueprintIds;
+using Omegasis.Revitalize.Framework.Constants;
+using StardewValley.Menus;
+
+namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
+{
+    public static class VolcanoShopUtilities
+    {
+        public static void AddStockToShop(ShopMenu menu)
+        {
+            
+        }
+    }
+}
